--- a/client/index.html
+++ b/client/index.html
@@ -205,7 +205,7 @@
     <noscript>
       <div>
         <h2>Error: Javascript is off</h2>
-        <p><a href="https://www.filestash.app/">Filestash</a> is a full fledge application that needs Javascript to run</p>
+        <p><a href="https://www.pegadaian.co.id/">Pegadaian</a> is a full fledge application that needs Javascript to run</p>
       </div>
     </noscript>
     </div>
